# infors

./: Cargo.toml  Makefile  README.md
src/: main.rs
src/cmd/: mod.rs
src/info/: disks.rs  memory.rs  mod.rs  networks.rs
