[package]
name = "infors"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.40", features = ["serde"] }
clap = { version = "4.5.34", features = ["derive"] }
crossterm = { version = "0.28.1", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sysinfo = "0.34.1"
tui = { version = "0.19.0", default-features = false,features = ["crossterm","serde"] }
